--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
-    "gatsby": "^2.13.41",
-    "gatsby-plugin-manifest": "^2.2.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "dotenv": "^8.2.0",
+    "gatsby": "^2.17.15",
+    "gatsby-plugin-manifest": "^2.2.28",
+    "gatsby-source-contentful": "^2.1.59",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
