--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@narative/gatsby-theme-novela": "^0.*",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.17.15",
-    "gatsby-plugin-manifest": "^2.2.28",
-    "gatsby-source-contentful": "^2.1.59",
+    "gatsby": "^2.18.3",
+    "gatsby-plugin-disqus": "^1.1.4",
+    "gatsby-plugin-google-analytics": "^2.1.28",
+    "gatsby-plugin-manifest": "^2.2.29",
+    "gatsby-source-contentful": "^2.1.63",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
