--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@narative/gatsby-theme-novela": "^0.*",
+    "@narative/gatsby-theme-novela": "^0.10.3",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.18.3",
+    "gatsby": "^2.18.5",
     "gatsby-plugin-disqus": "^1.1.4",
-    "gatsby-plugin-google-analytics": "^2.1.28",
-    "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-source-contentful": "^2.1.63",
+    "gatsby-plugin-google-analytics": "^2.1.29",
+    "gatsby-plugin-manifest": "^2.2.30",
+    "gatsby-source-contentful": "^2.1.65",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
